# react-native-sync-tasks

./: .gitignore  CONTRIBUTING.md  README.md  SyncTasks.podspec  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/synctasks/: SyncTasksModule.kt  SyncTasksPackage.kt
cpp/: JSManager.cpp  JSManager.hpp  JSTask.cpp  JSTask.hpp  constants.hpp  react-native-sync-tasks.cpp  react-native-sync-tasks.hpp
cpp/core/: TaskScheduler.hpp
cpp/helpers/: helpers.hpp
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/synctasks/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/SyncTasksExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/SyncTasksExample.xcodeproj/: project.pbxproj
example/ios/SyncTasksExample.xcodeproj/xcshareddata/xcschemes/: SyncTasksExample.xcscheme
example/ios/SyncTasksExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: SyncTasks.h  SyncTasks.mm
ios/rust/fetcher.xcframework/: Info.plist
ios/rust/fetcher.xcframework/ios-arm64/Headers/: fetcher.h
rust/fetcher-rust/: Cargo.toml
rust/fetcher-rust/android/: build-android.sh
rust/fetcher-rust/ios/: Cargo.toml  build-ios.sh
rust/fetcher-rust/src/: lib.rs
src/: index.tsx
